changed solr start up